objects/Dashboard_Data__c.object
<CustomObject>
    <fields>
        <fullName>Code_Changes_Issues_Ratio__c</fullName>
        <description>Code Changes Issues Ratio</description>
        <inlineHelpText>Code Changes Issues Ratio</inlineHelpText>
        <label>Code Changes Issues Ratio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customization_Ratio__c</fullName>
        <description>Customization Ratio</description>
        <inlineHelpText>Customization Ratio</inlineHelpText>
        <label>Customization Ratio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <description>Environment</description>
        <inlineHelpText>Environment</inlineHelpText>
        <label>Environment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instance_Description__c</fullName>
        <description>Instance Description</description>
        <inlineHelpText>Instance Description</inlineHelpText>
        <label>Instance Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Edition__c</fullName>
        <description>Org Edition</description>
        <inlineHelpText>Org Edition</inlineHelpText>
        <label>Org Edition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Id__c</fullName>
        <description>Org Id</description>
        <inlineHelpText>Org Id</inlineHelpText>
        <label>Org Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_URL__c</fullName>
        <description>Org URL</description>
        <inlineHelpText>Org URL</inlineHelpText>
        <label>Org URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QoC_Variation__c</fullName>
        <description>QoC Variation</description>
        <inlineHelpText>QoC Variation</inlineHelpText>
        <label>QoC Variation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QoC__c</fullName>
        <description>QoC</description>
        <inlineHelpText>QoC</inlineHelpText>
        <label>QoC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scan_Date__c</fullName>
        <description>Scan Date</description>
        <inlineHelpText>Scan Date</inlineHelpText>
        <label>Scan Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scan_ID_External__c</fullName>
        <description>Scan ID External</description>
        <inlineHelpText>Scan ID External</inlineHelpText>
        <label>Scan ID External</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Debt_Variation__c</fullName>
        <description>Technical Debt Variation</description>
        <inlineHelpText>Technical Debt Variation</inlineHelpText>
        <label>Technical Debt Variation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technical_Debt__c</fullName>
        <description>Technical Debt</description>
        <inlineHelpText>Technical Debt</inlineHelpText>
        <label>Technical Debt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Issues_Variation__c</fullName>
        <description>Total Issues Variation</description>
        <inlineHelpText>Total Issues Variation</inlineHelpText>
        <label>Total Issues Variation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Issues__c</fullName>
        <description>Total Issues</description>
        <inlineHelpText>Total Issues</inlineHelpText>
        <label>Total Issues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dashboard Data</label>
    <nameField>
        <label>Dashboard Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dashboard Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>